[Bugfix] Fix heading sizes on mobile and add missing padding

--- a/src/styles/4-elements/_headings.scss
+++ b/src/styles/4-elements/_headings.scss
@@ -21,3 +21,9 @@ h3 {
   font-size: 3rem;
   color: $clr-h3;
 }
+
+@include bp-small {  
+  h2 {
+    font-size: 7rem;
+  }
+}
